--- a/lib/index.html
+++ b/lib/index.html
@@ -5,13 +5,13 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.8.0/css/tachyons.min.css"/>
-    <link rel="icon" type="image/png" href="http://i.imgur.com/zBEQq4w.png">
+    <link rel="icon" type="image/png" href="https://i.imgur.com/zBEQq4w.png">
   </head>
   <body class="">
     <h2 class="bg-teal white h-25 tc ttu f1 lh-title lh-solid mt0 pa2 pb3 mb0 pb0">
       Hits!
-      <a href="http://hits.dwyl.io/" >
-        <img src="http://hits.dwyl.io/homepage.svg" alt="Hit Count" class="pa0 ba bw1 b--white">
+      <a href="https://hits.dwyl.io/" >
+        <img src="https://hits.dwyl.io/homepage.svg" alt="Hit Count" class="pa0 ba bw1 b--white">
       </a>
     </h2>
     <h4 class="mt0 tc fw5 f5 teal pa2 mb0">
@@ -49,7 +49,7 @@
       <h3 class="mt3 fw5 tc db f3 bg-teal white pa2">Your Badge <em>Markdown:</em></h3>
     </div>
     <pre id="badge" class="pl2 fw4 ba bw1 pa3 ma2" style="white-space: pre-wrap; word-break: keep-all;">
-      [![HitCount](http://hits.dwyl.io/{username}/{repo}.svg)](http://hits.dwyl.io/{username}/{repo})
+      [![HitCount](https://hits.dwyl.io/{username}/{repo}.svg)](https://hits.dwyl.io/{username}/{repo})
     </pre>
 
     <p class="pl2" id="nojs">
